--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -5,3 +5,10 @@
 /* components */
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
+
+section.container {
+    padding-bottom: 30px;
+}
+footer.container {
+    padding-top: 0;
+}
