--- a/css/base/base.css
+++ b/css/base/base.css
@@ -10,3 +10,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
         sans-serif;
 }
+
+.bg-main {
+    background-color: #03a9f3;
+}
