--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -6,9 +6,43 @@
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
-section.container {
+/* hero */
+.hero {
+    min-height: 100vh;
     padding-bottom: 30px;
+    background-image: url(../../img/background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.hero > .short-row {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    text-align: center;
+}
+
+.logo {
+    width: 100%;
+    height: 40px;
+    object-fit: contain;
+    object-position: center;
+}
+
+.main-title {
+    font-size: 60px;
+    text-transform: uppercase;
+    letter-spacing: -4px;
+}
+
+.main-description {
+    font-size: 18px;
+}
+
+/* main */
+
+/* footer */
 footer.container {
     padding-top: 0;
 }
