--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -3,14 +3,29 @@
     padding-bottom: 60px;
 }
 
+.container > .short-row {
+    width: 600px;
+    margin-left: calc(50% - 300px);
+}
+
 .container > .row {
+    display: inline-block;
     width: 1000px;
     margin-left: calc(50% - 500px);
 }
 
-.container > .short-row {
-    width: 600px;
-    margin-left: calc(50% - 300px);
+.container > .columns {
+    display: flex;
+    justify-content: space-between;
+}
+.container > .columns > .column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 50%;
+}
+.container > .columns > .right-column {
+    width: 40%;
 }
 
 @media (max-width: 1100px) {
@@ -24,6 +39,13 @@
     .container > .row {
         width: 600px;
         margin-left: calc(50% - 300px);
+    }
+    .container > .columns {
+        flex-direction: column;
+        gap: 60px;
+    }
+    .container > .columns > .column {
+        width: 100%;
     }
 }
 
