--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -4,6 +4,7 @@
 /* 3rd-party */
 @import '../3rd-party/font-awesome.min.css';
 /* components */
+@import '../components/clock.css';
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
