--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -5,6 +5,7 @@
 @import '../3rd-party/font-awesome.min.css';
 /* components */
 @import '../components/clock.css';
+@import '../components/mouse.css';
 
 /* CUSTOM STYLE BELOW THIS COMMENT LINE */
 
