--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -52,7 +52,11 @@ footer.container {
     padding-top: 0;
 }
 
-.row.socials {
+footer > .row {
+    position: relative;
+}
+
+.socials {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -74,4 +78,10 @@ footer.container {
 .socials > a:hover {
     background-color: #fff;
     color: #03a9f3;
+}
+
+.back-to-top {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
