--- a/css/components/mouse.css
+++ b/css/components/mouse.css
@@ -1,7 +1,8 @@
 .mouse {
     width: 8em;
     height: 13em;
-    font-size: 3px;
+    /* font-size: 3px; */
+    font-size: 20px;
     border: 1em solid #fff;
     border-radius: 4em;
     position: relative;
@@ -17,4 +18,21 @@
     transform: translateX(-50%);
     background-color: #fff;
     border-radius: 0.5em;
+    animation-name: scroll;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes scroll {
+    0% {
+        top: 2.5em;
+        background-color: #fff;
+    }
+    30% {
+        background-color: #fff;
+    }
+    100% {
+        top: 7.5em;
+        background-color: transparent;
+    }
 }
