--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -6,6 +6,7 @@
 /* components */
 @import '../components/button.css';
 @import '../components/clock.css';
+@import '../components/form.css';
 @import '../components/mouse.css';
 @import '../components/progress-bar.css';
 
